<resources>
    <string name="app_name">DORA</string>
    <string name="welcome">Welcome!</string>
    <string name="settings">Settings</string>
    <string name="set_preference">Set preference</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="museums">Museums</string>
    <string name="save_preferences">Save preferences</string>
    <string name="preferences">Preferences</string>
    <string name="parks">Parks</string>
</resources>